<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".AccountCreateActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/icon_description"
        android:src="@drawable/gaymer_list_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp">

        <EditText
            android:id="@+id/user_text_input"
            style="@style/Input.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/user_placeholder" />

        <EditText
            android:id="@+id/email_text_input"
            style="@style/Input.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_placeholder" />

        <EditText
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Input.Primary"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password_placeholder" />

        <EditText
            android:id="@+id/repeat_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Input.Primary"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/repeat_password_placeholder" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button.Primary"
            android:layout_marginTop="10dp"
            android:text="@string/register_placeholder" />

    </LinearLayout>

</LinearLayout>
